# tone-tags-bot

./: Cargo.toml  PRIVACY.md  README.md  TERMS.md  preload.psql
src/: main.rs  standard.rs
standards/: common_namtao.md  core.md
