[package]
name = "tone-tag-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
futures = "0.3.31"
log = "0.4.22"
poise = "0.6.1"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
